--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>app</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mybatis-generator-demo</name>
-    <description>Demo project for Spring Boot</description>
+    <description>mybatis-generator-demo for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
