--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,13 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=Asd123@wpy
+# Druid 数据源配置，继承spring.datasource.* 配置，相同则覆盖
+spring.datasource.druid.initial-size=2
+spring.datasource.druid.max-active=30
+spring.datasource.druid.min-idle=2
+spring.datasource.druid.max-wait=1234
+spring.datasource.druid.pool-prepared-statements=true
+spring.datasource.druid.max-pool-prepared-statement-per-connection-size=5
 #json配置
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
