--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,24 @@ spring.datasource.password=Asd123@wpy
 spring.datasource.druid.initial-size=2
 spring.datasource.druid.max-active=30
 spring.datasource.druid.min-idle=2
-spring.datasource.druid.max-wait=1234
+spring.datasource.druid.max-wait=60000
 spring.datasource.druid.pool-prepared-statements=true
 spring.datasource.druid.max-pool-prepared-statement-per-connection-size=5
+spring.datasource.druid.validation-query=SELECT 1
+spring.datasource.druid.validation-query-timeout=2000
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.time-between-eviction-runs-millis=60000
+spring.datasource.druid.min-evictable-idle-time-millis=300000
+# Druid filters 配置
+spring.datasource.druid.filters=stat,wall,log4j
+# 配置下面参数用于启动监控页面，考虑安全问题，默认是关闭的，按需开启
+spring.datasource.druid.stat-view-servlet.enabled=true
+spring.datasource.druid.filter.stat.enabled=true
+spring.datasource.druid.web-stat-filter.enabled=true
+spring.datasource.druid.stat-view-servlet.login-username=admin
+spring.datasource.druid.stat-view-servlet.login-password=admin123
 #json配置
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
